fix search component layout on mobile devices

--- a/styles/SearchComponent.module.css
+++ b/styles/SearchComponent.module.css
@@ -1,8 +1,7 @@
 .searchModal {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  inset: 0;
+  margin: auto;
   width: 90vw;
   max-width: 37.5rem;
   max-height: 80vh;
@@ -228,7 +227,7 @@
 
 @media (width <= 640px) {
   .searchModal {
-    width: calc(100vw - 2rem);
+    width: 80vw;
     max-height: 70vh;
   }
 
